# tinyverse

./: Cargo.toml  README.md
tiny_weather/: Cargo.toml
tiny_weather/docs/open_metro/: forecast_api.md  geocoding_apis.md
tiny_weather/src/: args.rs  lib.rs  main.rs
tiny_weather/src/client/: error.rs  forecast.rs  geocoding.rs  mod.rs
tiny_weather/src/client/types/: common.rs  forecast.rs  geocoding.rs  mod.rs
